[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/PausePopup.gd" type="Script" id=1]

[node name="PausePopup" type="PopupDialog"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1520.0
margin_bottom = -780.0
rect_min_size = Vector2( 400, 300 )
popup_exclusive = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.3
text = "GAME PAUSED"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 1.0
custom_constants/separation = 32
alignment = 1

[node name="ResumeBtn" type="Button" parent="VBoxContainer"]
margin_top = 43.0
margin_right = 160.0
margin_bottom = 63.0
text = "RESUME GAME"

[node name="CkptBtn" type="Button" parent="VBoxContainer"]
margin_top = 95.0
margin_right = 160.0
margin_bottom = 115.0
text = "LOAD CHECKPOINT"

[node name="QuitBtn" type="Button" parent="VBoxContainer"]
margin_top = 147.0
margin_right = 160.0
margin_bottom = 167.0
text = "QUIT GAME"
[connection signal="button_up" from="VBoxContainer/ResumeBtn" to="." method="_on_resume"]
[connection signal="button_up" from="VBoxContainer/CkptBtn" to="." method="_on_load"]
[connection signal="button_up" from="VBoxContainer/QuitBtn" to="." method="_on_quit_btn"]
